--- a/_posts/2020-11-16-dev-project-101.md
+++ b/_posts/2020-11-16-dev-project-101.md
@@ -17,19 +17,19 @@ last_modified_at: 2020-11-16T06:53:00-00:00
 
 딱 1년전, 
 
-나는 아래와 같은 시스템의 주문서(?)를 받았다.
+나는 아래와 같은 시스템 주문서(?)를 받았다.
 
 
-> AI 연구교육 시스템을 만들고 싶어요
-우리가 만들 시스템의 주요 대상은 학생들이고 주로 PC를 이용해서 사용할 겁니다
-각 전공별로 과정이 수행되야하고 수행 프로젝트 가 이력으로 남아야합니다
+> AI 연구교육 시스템을 만들고 싶어요<br>
+우리가 만들 시스템의 주요 대상은 학생들이고 주로 PC를 이용해서 사용할 겁니다<br>
+각 전공별로 과정이 수행되야하고 수행 프로젝트 가 이력으로 남아야합니다<br>
 국내 활성화 이후에는 해외시장까지 고려해야하구요.
 ...
 
 주문서를 받았을 때 사실 어디서부터 시작해야 할지 난감했다.
 
  어플리케이션을 처음부터 만들어 본적이 없었고 예전부터 사용하던 언어(Java)를 벗어나야겠다는 생각만 했지 막상 어떤 언어를 선택할지는 정하지 못하고 있었다. 
-총.체.적.난.국.  이었지만 프로젝트를 여러번 이끌어 보신 PM분과 내가 합류하기 전부터 이미 많은 산출물들을 만들며 아이디어를 구체화 하고 있던 기획자 분들이 있어 한 단계씩 시작할 수 있었다.
+총.체.적.난.국.  이었지만 프로젝트를 여러번 이끌어 보신 PM분과 내가 합류하기 전부터 이미 많은 산출물들을 만들며 아이디어를 구체화 하고 있던 기획자 분이 있어 한 단계씩 시작할 수 있었다.
 
 <br><br><br>
 ---
@@ -118,7 +118,7 @@ stackshare 에서 Udemy를 검색했을 때 나오는 화면이다. Udemy는 jQu
 
 **로그분석**
 
-**Google Analytics**, 무료, 쉬운 셋업, 시각화.</br></br>
+**Google Analytics**, 무료, 쉬운 셋업, 시각화.<br><br>
 
 이렇게 정리된 기술 스택이 제품을 만들때 그대로 사용되지는 않았지만 이런 일련의 작업들을 통해 전체 아키텍쳐를 머릿속에 그려보고 기술의 장단점과 기술의 조합들을 고려하게 되었다. 기술 스택에서 가장 중요한 부분은 아무래도 서버언어/프레임워크 와 프론트언어의 선택일 것인데 이 부분은 Back-end/ Front-end 개발자의 입김이 많이 작용했다.
 
