--- a/_posts/2023-08-13-cka-exam-2023.md
+++ b/_posts/2023-08-13-cka-exam-2023.md
@@ -16,6 +16,9 @@ last_modified_at: 2023-08-13T22:30:00-00:00
 
 ---
 
+![certified Kubernetes Administrator](/assets/images/cka.png)
+CKA 자격에 합격하게 되어 기쁩니다..!
+
 
 
 ## 시작하며
