--- a/_posts/2023-08-13-cka-exam-2023.md
+++ b/_posts/2023-08-13-cka-exam-2023.md
@@ -33,8 +33,8 @@ CKA 자격에 합격하게 되어 기쁩니다..!
 
 다짐에서 오늘의 당면과제가 된 것이다..!
 
-<!-- ![인생이란...](/assets/images/k8s-1.png)
-인생이란... - 출처 : https://v.daum.net/v/20160429080109356 -->
+![인생이란...](/assets/images/k8s-1.png)
+인생이란... - 출처 : https://v.daum.net/v/20160429080109356
 
 타회사 엔지니어에게 직접 인수인계받는 영광도 잠시
 
